--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{subfig}
+\usepackage{longtable}
 
 % ================ Mathematics and symbols =========
 \usepackage{amsmath, amssymb, mathtools, bm, siunitx}
