--- a/bibliography.bib
+++ b/bibliography.bib
@@ -175,3 +175,15 @@ abstract = {This study aims to build a photovoltaic (PV) plant maintenance and o
    url = {https://arxiv.org/pdf/1701.06538},
    year = {2017}
 }
+
+IEA (2024), World Energy Outlook 2024, IEA, Paris https://www.iea.org/reports/world-energy-outlook-2024, Licence: CC BY 4.0 (report); CC BY NC SA 4.0 (Annex A)
+
+
+
+
+
+
+
+
+
+IEA (2024), Share of renewable electricity generation by technology, 2000-2030, IEA, Paris https://www.iea.org/data-and-statistics/charts/share-of-renewable-electricity-generation-by-technology-2000-2030, Licence: CC BY 4.0
