--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,9 @@
 % Basic text and encoding
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{setspace}
-\usepackage{geometry}
+\usepackage[lmargin=1.5in, rmargin=1in, tmargin=1in, bmargin=1in]{geometry} %sets the margins for the pages - Nina Salvesen's NTNU template settings
+\setcounter{tocdepth}{2} %table of contents number depth for subsections (2 = x.x.x)
+\setcounter{secnumdepth}{4} %numbering depth for headers for subsections in the text(4 = x.x.x.x)
 
 % Page styling and headers
 \usepackage{fancyhdr}
@@ -28,9 +29,6 @@
 \usetikzlibrary{positioning, arrows.meta, shapes, fit, calc}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
-
-% Text positioning
-\usepackage[absolute, overlay]{textpos}
 
 % ===================== IEEE STYLE BIBLIOGRAPHY =====================
 % CHANGED FROM: \usepackage[backend=biber, style=numeric, sorting=none]{biblatex}
@@ -59,6 +57,9 @@
 \definecolor{ntnu-gray}{HTML}{A7A8AA} % Gray
 \definecolor{ntnu-yellow}{HTML}{F2A900} % Yellow
 
+% Text positioning
+\usepackage[absolute, overlay]{textpos}
+
 % ===================== PACKAGE CONFIGURATIONS =====================
 % Graphics settings
 \graphicspath{{Figures/}}
@@ -85,23 +86,24 @@
 
 % ===================== DOCUMENT START =====================
 \begin{document}
-    % Document formatting
-    \onehalfspacing
-    \setlength{\parindent}{1em}
-    \setlength{\parskip}{1em}
+    
 
     % ===================== TITLE PAGE =====================
     \begin{titlepage}
-        \newgeometry{top=2cm,bottom=2cm,left=2cm,right=2cm}
+        \newgeometry{left=2.5in, right=2in}
         \setlength{\TPHorizModule}{1cm}
         \setlength{\TPVertModule}{1cm}
         \textblockorigin{0cm}{0cm}
         \begin{tikzpicture}[remember picture, overlay]
+            % Purple rectangle starts at Zeshan Mubshir text level
             \fill[ntnu-purple]
-                ([xshift=0cm, yshift=-4cm]current page.north west) rectangle ++(3.5cm, -10cm);
+                ([xshift=0cm, yshift=-3cm]current page.north west) rectangle ++(5cm, -10.0cm);
+            
+            % White area for university text
             \fill[white]
-                ([xshift=3.5cm, yshift=-4cm]current page.north west) rectangle ++(3cm, -10cm);
+                ([xshift=4cm, yshift=-3cm]current page.north west) rectangle ++(3cm, -26.7cm);
 
+            % "Master's thesis" text in white on purple background
             \node[
                 rotate=90,
                 anchor=center,
@@ -109,109 +111,87 @@
                 color=white
             ]
                 at
-                ([xshift=1.75cm, yshift=-9cm]current page.north west)
+                ([xshift=3cm, yshift=-10.35cm]current page.north west)
                 {Master's thesis};
 
+            % NTNU university information rotated on white background
             \node[rotate=90, anchor=center, font=\sffamily\small, color=black]
                 at
-                ([xshift=2cm, yshift=-20.0cm]current page.north west)
-                {\parbox{8cm}{ \textbf{NTNU}\\ Norwegian University of Science and Technology\\ Faculty of Information Technology and Electrical Engineering\\ Department of ICT and Natural Sciences}};
+                ([xshift=3.0cm, yshift=-16.35cm]current page.north west)
+                {\parbox{12cm}{\centering \textbf{NTNU}\\Norwegian University of Science and Technology\\ Faculty of Information Technology and Electrical Engineering\\ Department of ICT and Natural Sciences}};
         \end{tikzpicture}
 
-        % Main title block
-        \begin{textblock*}
-            {12cm}(6cm, 5cm) \raggedright \Large Zeshan Mubshir\\[1cm]
+        % Main title block - Nina's layout style but with your content
+        \vspace*{1.5cm}
 
-            \Large\textbf{Autonomous Monitoring and Classification of Solar PVs
-            Anomalies using Deep Learning Methods}\\[0.5cm]
+        \noindent  \textcolor{gray}{\large Zeshan Mubshir} \\
+        \vspace{1cm}
 
-            \normalsize Master's thesis in Simulation and Visualization\\
-            Supervisor: Saleh Abdel-Afou Alaliyat\\ Co-supervisor: Mohammadreza Aghaei\\
-            July 2025
-        \end{textblock*}
+        \noindent \textbf{\Large Autonomous Monitoring and Classification of Solar PVs Anomalies using Deep Learning Methods} \\
+        \vspace{0.5cm}
 
-        \begin{textblock*}
-            {8cm}(6cm, 25.5cm)
-            \includegraphics[width=5cm]{Figures/NTNU Main Logo.png}
-        \end{textblock*}
-        \restoregeometry
+        \noindent {\large Master's thesis in Simulation and Visualization} \\
 
-        % Add a Blank Page
-        \newpage
+        \vspace{7cm}
+        \noindent Supervisor: Saleh Abdel-Afou Alaliyat \\
+        Co-supervisor: Mohammadreza Aghaei \\
+        July 2025 \\
 
-        % Main title block
-        \begin{textblock*}
-            {12cm}(6cm, 5cm) \raggedright \Large Zeshan Mubshir\\[1cm]
-
-            \Large\textbf{Autonomous Monitoring and Classification of Solar PVs
-            Anomalies using Deep Learning Methods}\\[0.5cm]
-
-            \normalsize Master's thesis in Simulation and Visualization\\
-            Supervisor: Saleh Abdel-Afou Alaliyat\\ Co-supervisor: Mohammadreza Aghaei\\
-            July 2025
-
-            \vspace{8cm}
-
-            \normalsize \textbf{NTNU}\\ Norwegian University of Science and
-            Technology\\ Faculty of Information Technology and Electrical Engineering\\
-            Department of ICT and Natural Sciences
-        \end{textblock*}
-
-        \begin{textblock*}
-            {8cm}(6cm, 25.5cm)
-            \includegraphics[width=5cm]{Figures/NTNU Main Logo.png}
-        \end{textblock*}
+        \begin{figure}[h]
+            \includegraphics[width=0.5\textwidth]{Figures/NTNU Main Logo.png}
+        \end{figure}
         \restoregeometry
     \end{titlepage}
 
     \myemptypage
 
     % ===================== FRONT MATTER =====================
-    \frontmatter
-    \pagenumbering{roman}
-
     % Abstract (English Abstract)
     \chapter*{Abstract}
-    \addcontentsline{toc}{chapter}{Abstract}
+    \pagenumbering{roman} %introductory pages should be roman
+    \setcounter{page}{1}
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Abstract}
     \input{Chapters/00Abstract}
 
     % Sammendrag (Norwegian Abstract)
     \chapter*{Sammendrag}
-    \addcontentsline{toc}{chapter}{Sammendrag}
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Sammendrag}
     \input{Chapters/01Sammendrag}
 
     % Preface (Introduction to the thesis)
     \chapter*{Preface}
-    \addcontentsline{toc}{chapter}{Preface}
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Preface}
     \input{Chapters/03Preface}
 
     % Table of Contents
     \tableofcontents
-    \addcontentsline{toc}{chapter}{Contents}
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Contents}
 
     % List of Figures
+    \addcontentsline{toc}{chapter}{\protect\numberline{}\listfigurename}
     \listoffigures
-    \addcontentsline{toc}{chapter}{\listfigurename}
-
-    % List of Tables
+    \addcontentsline{toc}{chapter}{\protect\numberline{}\listtablename}
     \listoftables
-    \addcontentsline{toc}{chapter}{\listtablename}
 
     % Abbreviations
     \chapter*{Abbreviations}
-    \addcontentsline{toc}{chapter}{Abbreviations}
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Abbreviations}
     \input{Chapters/02Abbreviations}
+    \newpage
 
     \myemptypage % Empty page after abbreviations
 
     % ===================== MAIN MATTER =====================
+    % Customize the layout of the main content of your thesis
+    \pagestyle{fancy} %set customized page style for header
+    \fancyhf{} %clear header and footer fields
+    \renewcommand{\headrulewidth}{0pt} %set to no rule
+    \fancyhead[LE, RO]{\thepage} %set the page number at left for even, right for odd pages
+    \fancyhead[RE, LO]{\leftmark} %set the chapter name at right for even, left for odd pages
+    \setlength{\headheight}{14.49998pt} %set the header height
+
     \mainmatter
     \pagenumbering{arabic}
-
-    % Page style setup
-    \pagestyle{fancy}
-    \fancyhf{} \fancyhead[LE,RO]{\thepage} \fancyhead[RE,LO]{\leftmark}
-    \setlength{\headheight}{14.49998pt}
 
     % Chapters
     \chapter{Introduction}
@@ -222,8 +202,8 @@
     \input{Chapters/Ch2Literature Review}
     \cleardoublepage
 
-    \chapter{Theoretical Background}  % Fixed spelling: "Theoretical"
-    \input{Chapters/Ch3Theoratical Background}  % Fixed filename
+    \chapter{Theoretical Background}
+    \input{Chapters/Ch3Theoratical Background}
     \cleardoublepage
 
     \chapter{Methodology}
@@ -246,52 +226,48 @@
     \backmatter
 
     % Bibliography
-    \addcontentsline{toc}{chapter}{References}
-    \printbibliography[title={References}]  % Added title
+    \addcontentsline{toc}{chapter}{\protect\numberline{}References}
+    \printbibliography[title={References}]
     \cleardoublepage
 
     % Appendices
-    \appendix
     \chapter*{\LARGE \textbf{Appendices}}
-    \fancyhf{}
-    \renewcommand{\headrulewidth}{0pt}
-    \fancyfoot[C]{\thepage}
-    \addcontentsline{toc}{chapter}{Appendices}
-    \input{Chapters/Ch8Appendix}
+    \fancyhf{} %clear the header, it should be empty for the appendices
+    \renewcommand{\headrulewidth}{0pt} %no rule
+    \fancyfoot[C]{\thepage} %set the page numbers in the center of the footer instead
+    \addcontentsline{toc}{chapter}{\protect\numberline{}Appendices}
+    \appendix
+        \input{Chapters/Ch8Appendix}
 
     % ===================== BACK COVER =====================
     \cleardoublepage
     \thispagestyle{empty}
     \newgeometry{top=0cm,bottom=0cm,left=0cm,right=0cm}
 
-    %Alternative color
+    % Clean back cover design matching the provided reference image
     \begin{tikzpicture}[remember picture, overlay]
-        % Light purple rectangle
+        % White circle in upper portion (not center)
+        \draw[fill=white, draw=gray!30, line width=1pt]
+            ($(current page.center) + (0,2cm)$) circle (3.5cm);
+
+        % Purple rectangle at top - bottom aligns with circle center
         \fill[ntnu-purple]
-            (current page.north west)
-            ++(10.0cm,-5cm) rectangle ++(25cm,-5cm);
+            (current page.north west) rectangle 
+            ($(current page.center) + (21cm,2cm)$);
 
-        % Light white circle with Outline of Purple line
-        \draw[fill=white, draw=ntnu-purple, opacity=0.5]
-            (current page.north west)
-            ++(10cm,-10cm)
-            circle
-            (3.5cm);
+        % Vertical line from bottom of circle going down
+        \draw[gray!40, line width=0.8pt]
+            ($(current page.center) + (0,-1.5cm)$) -- ++(0,-4cm);
 
-        \draw[ntnu-purple, line width=1pt, opacity=0.5]
-            (current page.north west)
-            ++(10cm,-13.5cm) -- ++(0cm,-3.5cm);
+        % Horizontal line extending to the right edge of the page
+        \draw[gray!40, line width=0.8pt]
+            ($(current page.center) + (0,-5.5cm)$) -- ($(current page.east) + (-1cm,-5.5cm)$);
 
-        \draw[ntnu-purple, line width=1.0pt, opacity=0.5]
-            (current page.north west)
-            ++(10cm,-17cm) -- ++(15.0cm,0cm);
-
-        % NTNU logo at bottom left
-        \node[anchor=south west]
-            at
-            ($(current page.south west) + (5.0,5.0)$)
-            {\includegraphics[width=5cm]{Figures/NTNU Main Logo.png}};
+        % NTNU logo at bottom center
+        \node[anchor=center] at ($(current page.south) + (0,4cm)$)
+            {\includegraphics[width=0.35\textwidth]{Figures/NTNU Main Logo.png}};
     \end{tikzpicture}
 
     \restoregeometry
+ 
 \end{document}
