--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{float}
 \usepackage{subfig}
 \usepackage{longtable}
+\usepackage{array}
 
 % ================ Mathematics and symbols =========
 \usepackage{amsmath, amssymb, mathtools, bm, siunitx}
@@ -86,7 +87,6 @@
 
 % ===================== DOCUMENT START =====================
 \begin{document}
-    
 
     % ===================== TITLE PAGE =====================
     \begin{titlepage}
